--- a/changelog/breaking-changes-migration/breaking-changes.mdx
+++ b/changelog/breaking-changes-migration/breaking-changes.mdx
@@ -1,118 +1,161 @@
 ---
 title: "Breaking Changes"
-description: "A curated summary of incompatible or disruptive changes made in recent versions. The page details deprecated APIs, removed functions, mandatory C++ standard bumps, and changes that could disrupt build or test behavior."
+description: "A curated list of changes that may require user intervention due to altered APIs, removed features (such as minimum C++ standard version increases), or changed behaviors. Provides context, examples, and recommended actions for impacted users."
 ---
 
 # Breaking Changes
 
-This page provides a curated summary of incompatible or disruptive changes introduced in recent versions of GoogleMock. These changes include deprecated APIs, removed functions, required updates to the C++ standard compliance, and any modifications that could impact your build or test behavior. Understanding these changes helps you plan upgrades and maintain your test suites with confidence.
+GoogleTest's **Breaking Changes** page provides a curated and detailed overview of modifications in the framework that require explicit user attention. These changes often affect test code behavior due to altered APIs, removed or adjusted features, or changes in default behaviors. Understanding these changes is critical to ensure smooth upgrades and prevent unexpected test failures.
 
 ---
 
-## 1. Deprecated APIs and Removed Functions
+## What You Will Find Here
 
-- **Old Mocking Macros Deprecated**: The legacy `MOCK_METHODn` family (e.g., `MOCK_METHOD1`, `MOCK_CONST_METHOD2_T`) has been superseded by the generic `MOCK_METHOD` macro supporting full C++11 and beyond syntax. You should migrate to `MOCK_METHOD` as the older macros may be removed in future releases.
+This page is your go-to resource for all breaking changes that might impact your existing GoogleTest tests or setup. It offers:
 
-- **Disallowed Nested Strictness Modifiers**: Wrapping a mock class in multiple strictness modifiers like nested `NiceMock<StrictMock<...>>` is no longer supported. Such usage will result in compilation errors. Only one level of `NiceMock`, `NaggyMock`, or `StrictMock` is allowed.
+- **Contextual Explanation**: Why a change was made and its impact on test code.
+- **Concrete Examples**: Clear usage examples illustrating the before and after effects.
+- **Recommended Actions**: Guidance on how to adapt your tests or configurations to accommodate the change.
 
-- **Removal of Macro Conflicts**: GoogleMock now safely handles macro redefinitions of method names, such as in Windows API headers (e.g., `#define Method MethodW`), but you should avoid redefining mock method names manually to prevent conflicts.
-
-## 2. C++ Standard Compatibility Requirements
-
-- **Minimum C++17 Standard**: GoogleMock now requires C++17 or later. Compilers and build systems must be updated accordingly to avoid compilation or linkage errors.
-
-- **Support for Non-Moveable Return Types in Mocks**: For methods returning non-moveable types (e.g., those deleted move constructors), GoogleMock now supports mocking using `MOCK_METHOD` with proper handling. This requires your build environment to fully support C++17 features.
-
-## 3. Changes in Expectation and Default Behavior Handling
-
-- **Evaluation of Arguments in `EXPECT_CALL` and `ON_CALL`**: The macro arguments to `EXPECT_CALL` and `ON_CALL` are strictly evaluated exactly once to prevent unexpected side effects. Avoid writing expressions with side effects as arguments.
-
-- **Modifiers Order Restrictions**: The order of clauses in `EXPECT_CALL` has become strictly enforced. For instance, `.With()` must appear before `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()`. Violating this order will result in runtime errors or warnings.
-
-- **Default Action Requirements**: Every `ON_CALL` statement must specify `.WillByDefault()`. Omitting this will cause test failures. This ensures mock methods have defined default behaviors to avoid undefined return values.
-
-## 4. Mock Object Wrappers Behavior
-
-- **NiceMock, NaggyMock, and StrictMock**: These wrappers now guarantee strict compile-time checking against multiple applications. Applying more than one to the same mock class is an error.
-
-- **Virtual Destructors Requirement**: Mock classes must have virtual destructors for correct behavior with `NiceMock` and `StrictMock`. Non-virtual destructors may result in incorrect cleanup and test failures.
-
-## 5. Test Flow and Failure Messaging Enhancements
-
-- **Extended Verbosity Control**: The `--gmock_verbose` flag now supports granular control over mock call diagnostics, including options to suppress or include stack traces and match details.
-
-- **Detecting Exhausted Actions**: GoogleMock emits warnings when all `.WillOnce()` actions for an expectation are exhausted but additional calls occur, falling back to default actions. This helps detect mismatches between expected and actual call counts.
-
-- **Improved Failure Messages for Unexpected Calls**: Failure diagnostics now include detailed argument mismatches, expectation states (retired, unsatisfied), and partial order violations for `.After()` and `.InSequence()` clauses.
-
-## 6. Migration Tips
-
-- When upgrading, replace all `MOCK_METHODn` macros with the unified `MOCK_METHOD` macro.
-
-- Review and fix any violation of method qualifier and modifiers order in `EXPECT_CALL` and `ON_CALL`.
-
-- Update your build environment to use C++17 or later standards.
-
-- Audit your use of `NiceMock`, `NaggyMock`, and `StrictMock` wrappers to prevent nesting.
-
-- Check all `ON_CALL` usages to ensure `.WillByDefault()` is present.
-
-- Verify all mock classes have virtual destructors.
-
-- Utilize the `--gmock_verbose` flag during test debugging to identify issues with expectations and calls.
-
-## 7. Helpful References
-
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Full API details on mocking methods, expectations, and actions.
-
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipe-style guidance on common and advanced mocking scenarios.
-
-- [Legacy gMock FAQ](https://google.github.io/googletest/gmock_faq.html): Troubleshooting common legacy issues and understanding mock behaviors.
-
-- [Best Practices for GoogleMock](https://google.github.io/googletest/gmock_best_practices.html): Recommendations for writing maintainable and scalable mock-based tests.
+By focusing strictly on changes that are user-facing and potentially disruptive, this page helps you prepare and adjust your test suites effectively when upgrading GoogleTest.
 
 ---
 
-### Example: Migrating a Legacy MOCK_METHOD Macro
+## Why Breaking Changes Matter
 
-```cpp
-// Before (may be deprecated):
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD1(DoSomething, bool(int x));
-  MOCK_CONST_METHOD0(GetValue, int());
-};
+In evolving software projects like GoogleTest, minor internal tweaks seldom require users to modify their tests. However, breaking changes impose tangible effects such as:
 
-// After (recommended):
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(bool, DoSomething, (int x), (override));
-  MOCK_METHOD(int, GetValue, (), (const, override));
-};
-```
+- API modifications that may cause compilation or runtime errors.
+- Feature removals that alter the minimum compiler or language standard requirements.
+- Changes in assertion behavior that can lead to differing failure patterns.
 
-### Example: Correct Order of Expectation Clauses
-
-```cpp
-EXPECT_CALL(mock, Method(_))
-    .With(AnyArgsMatcher())  // Must be first if used
-    .Times(2)
-    .InSequence(seq)
-    .After(other_expectation)
-    .WillOnce(Return(1))
-    .WillRepeatedly(Return(2))
-    .RetiresOnSaturation();  // Must be last
-```
-
-### Example: Using StrictMock
-
-```cpp
-using ::testing::StrictMock;
-StrictMock<MockFoo> mock;
-EXPECT_CALL(mock, Method()).Times(1);
-// Any call to mock.Method() without expectation causes test failure
-```
+Failures or issues arising from unacknowledged breaking changes can be challenging to diagnose. This page is designed to spotlight these changes upfront so you are never caught off guard.
 
 ---
 
-This page ensures that you are prepared for changes that could affect your test suites and build pipelines due to updates in GoogleMock. Careful attention to these breaking changes will help maintain stable and robust tests.
+## Illustration of a Common Breaking Change: Minimum C++ Standard Upgrade
+
+An example of a breaking change is the adjustment of the minimum supported C++ standard version. For instance, past versions required C++11 or C++14, but a recent major release now mandates C++17 or later. This means your build environment and compilation flags must be updated accordingly.
+
+### What this means for you:
+
+- Tests and code using deprecated language features may fail to compile.
+- Your build configurations (Makefiles, CMakeLists, Bazel files) must be updated to reflect the new language standard requirement.
+
+### Recommended action:
+
+- Confirm your compiler supports C++17.
+- Update your project's compilation flags, e.g., add `-std=c++17` in GCC/Clang or corresponding MSVC flags.
+- Rebuild GoogleTest and all dependent tests.
+
+---
+
+## Handling API Changes and Removed Features
+
+GoogleTest's public API is stable, but occasionally functions or macros may be deprecated or removed. This page documents such changes explicitly, for example:
+
+- Renaming or removal of certain test macros or flags.
+- Changes in expectations for test suite naming conventions.
+
+You will find:
+
+- Descriptions of the replaced or removed APIs.
+- Code snippets showing the correct updated usage.
+- Suggestions for migration paths.
+
+---
+
+## Changes Affecting Test Behavior
+
+Some breaking changes do not just affect build or APIs but alter test execution behavior. Examples include:
+
+- Modified way death tests are run or restrictions on thread usage within them.
+- Enforcement of consistent use of fixtures within test suites.
+- Restrictions or warnings related to underscore usage in test and suite names.
+
+The consequences of ignoring such changes include unexpected failures or test skips. This documentation offers insights into these new behaviors and advises on how to ensure your tests comply.
+
+---
+
+## Examples of Common User-Impacting Changes
+
+- **Test Suite Fixture Consistency Enforcement**: All tests in the same test suite must use the same test fixture class. Mixing `TEST` and `TEST_F` or using different fixture classes causes runtime errors. Fix this by unifying the fixture class used or separating tests into different suites.
+
+- **Death Test Suite Naming**: Suites containing death tests should end with the suffix `DeathTest` to ensure correct execution order and thread-safe handling.
+
+- **Disallowed Underscore Usage**: Test suite and test names cannot start or end with underscores, and excessive underscore use in names may cause name conflicts due to internal class name mangling. Rename tests to avoid such cases.
+
+- **Default Death Test Style Change**: The recommended death test style has shifted towards `threadsafe` for improved stability in multithreaded environments, though it may slow down runtime.
+
+---
+
+## Step-by-Step User Guidance for a Breaking Change
+
+To illustrate, here is a common flow you can follow upon reading a breaking change notice on this page:
+
+<Steps>
+<Step title="Identify the Affected Tests or Features">
+Analyze which of your tests or build configurations relate to the deprecated or changed API or feature.
+</Step>
+<Step title="Consult the Provided Example">
+Review included code snippets showing before and after usage patterns to clarify what needs updating.
+</Step>
+<Step title="Update Your Code or Configuration">
+Modify your test code, build files, or test naming conventions as recommended.
+</Step>
+<Step title="Run and Validate Tests">
+Rebuild your project and run your tests fully to ensure compatibility.
+</Step>
+<Step title="Troubleshoot or Seek Help">
+If problems persist, consult related documentation or community resources provided in the summary section.
+</Step>
+</Steps>
+
+---
+
+## Troubleshooting Common Issues with Breaking Changes
+
+- **Compilation Errors After Upgrade**
+  - Cause: API removals or changes.
+  - Solution: Adjust code to new API or restore compatibility martially for transition.
+
+- **Unexpected Test Failures**
+  - Cause: Behavioral changes in assertions or test execution.
+  - Solution: Review failure messages in detail, use `SCOPED_TRACE` for diagnostics, compare old and new behavior.
+
+- **Runtime Errors Due to Fixture Mix-up**
+  - Cause: Mixing test fixture types within a test suite.
+  - Solution: Normalize the fixture usage or split the suite.
+
+- **Death Test Failures or Hangs**
+  - Cause: Incompatible death test style or threading issues.
+  - Solution: Adjust death test style to `threadsafe`, simplify threading in death tests.
+
+---
+
+## When to Refer to This Page
+
+Each time you update your GoogleTest version, check this page to:
+
+- Verify if the new version includes any breaking changes.
+- Understand the nature and scope of the changes.
+- Plan and execute necessary modifications in your project.
+
+Ignoring these changes can lead to challenging debugging sessions and delayed development.
+
+---
+
+## Further Assistance and References
+
+For deeper guidance, consult these related resources:
+
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Get started with test writing.
+- [Assertions Reference](reference/assertions.md) — Understand assertion behavior and macros.
+- [Advanced GoogleTest Topics](docs/advanced.md) — Explore advanced usage and test management.
+- [Migration Guides](changelog/breaking-changes-migration/migration-guides) — Step-by-step upgrade instructions.
+
+Additionally, engage with the community through GitHub and forums for collaborative support.
+
+---
+
+_Last updated for GoogleTest version 1.17.0 and later._
