--- a/changelog/breaking-changes-migration/migration-guides.mdx
+++ b/changelog/breaking-changes-migration/migration-guides.mdx
@@ -1,166 +1,153 @@
 ---
-title: "Migration & Upgrade Guides"
-description: "Step-by-step recommendations for migrating test code to comply with new versions, including sample fixes, compatibility strategies, and references to edited behaviors. Essential for maintainers managing large test suites or CI systems."
+title: "Migration Guides"
+description: "Step-by-step instructions and checklists to help users transition their codebases between major versions—covering dependency changes, configuration updates, and advice for common scenarios experienced in real migrations."
 ---
 
-# Migration & Upgrade Guides
+# Migration Guides
 
-Ensure your test suites and mocking code stay reliable and maintainable as GoogleTest and GoogleMock evolve. This guide provides clear, step-by-step recommendations for migrating your existing test code to new GoogleTest/GoogleMock versions. Learn how to adapt to updated syntax, modified behaviors, and deprecated features with practical examples and strategies.
-
----
-
-## 1. Overview of Migration
-
-Upgrading GoogleTest and GoogleMock often introduces syntactic improvements, behavior clarifications, and occasionally breaking changes to enhance reliability and usability. Maintaining large test suites or continuous integration (CI) systems demands awareness of relevant changes and systematic migration to prevent test failures.
-
-This guide focuses specifically on migration of test code -- particularly the mocking layer -- to comply with new versions, reducing maintenance overhead and improving test robustness.
+GoogleTest's migration guides provide clear, actionable steps and checklists to assist users as they transition their codebases between major versions. These guides focus on practical concerns such as dependency updates, configuration changes, and common scenarios encountered during real-world migrations. By following these guides, you can ensure smooth upgrades and minimize disruptions.
 
 ---
 
-## 2. Key Migration Topics
+## 1. Preparation for Migration
 
-### 2.1 Migrating from Old `MOCK_METHODn` Macros to `MOCK_METHOD`
+Before starting a version upgrade, it’s essential to understand the scope of changes, review release notes, and prepare your environment.
 
-Older GoogleMock versions use `MOCK_METHODn` macros, which are now deprecated:
+### Steps:
 
-- Replace all instances of `MOCK_METHODn(MethodName, ReturnType(Args))` with `MOCK_METHOD(ReturnType, MethodName, (Args))`.
-- For const methods, use `MOCK_METHOD(ReturnType, MethodName, (Args), (const))`.
-- When call type qualifiers or reference qualifiers are required, use the corresponding syntax with the optional 4th parameter in `MOCK_METHOD`.
+1. **Review Release Notes and Breaking Changes**
+   - Familiarize yourself with the [breaking changes](breaking-changes) and [release notes](release-notes-history).
+   - Identify any deprecated features or APIs that affect your tests.
 
-**Example:**
+2. **Check Environment Compatibility**
+   - Ensure your build environment meets the updated system requirements, such as C++17 support.
+   - Confirm your platform and compiler versions are supported ([Supported Platforms](getting-started/prerequisites-installation/system-requirements)).
 
-```cpp
-// Old style
-MOCK_CONST_METHOD1(Foo, bool(int));
+3. **Backup and Version Control**
+   - Commit all current work and create a branch specifically for migration to isolate changes.
 
-// New style
-MOCK_METHOD(bool, Foo, (int), (const));
-```
-
-This migration improves compatibility with various compilers and enhances maintainability.
-
-### 2.2 Adjusting Call Expectation Modifiers Order
-
-GoogleMock now enforces a stricter order for chained clauses in `EXPECT_CALL` and `ON_CALL` macros. The order must follow:
-
-- `.With()` (at most once, and should come first)
-- `.Times()` (at most once)
-- `.InSequence()` (any number of times)
-- `.After()` (any number of times)
-- `.WillOnce()` (any number of times)
-- `.WillRepeatedly()` (at most once)
-- `.RetiresOnSaturation()` (at most once, and must come last)
-
-Review and update your call expectations to adhere to this order. Failure to do so results in compilation errors to avoid ambiguous behavior.
-
-### 2.3 Handling Behavior Changes in Strict, Nice, and Naggy Mocks
-
-- **NaggyMock** is now the default behavior for mocks.
-- **StrictMock** emits errors on uninteresting calls.
-- **NiceMock** suppresses warnings but allows calls without expectations.
-
-If you rely on strictness modes, verify your mocks are wrapped appropriately to achieve your test intent.
-
-### 2.4 Migrating Overloaded Methods and Qualified Methods
-
-Ensure all overloads and const/ref-qualified methods are mocked explicitly using `MOCK_METHOD` with the necessary `(const)`, `(override)`, or `(ref(&))` qualifiers.
-
-Use `using BaseClass::MethodName;` in mock classes to prevent hiding base overloads after introducing mocks for only some versions.
-
-### 2.5 Transitioning Away from Variadic Functions to Overloads
-
-GoogleMock does not support mocking variadic functions directly. If your code uses ellipsis (`...`), migrate to overloads with explicitly declared parameters, which can be mocked naturally.
-
-### 2.6 Updating Default Actions and ON_CALL Usage
-
-- Use `ON_CALL` to specify default behaviors without imposing call count expectations.
-- Use `EXPECT_CALL` when you want to enforce call count or argument constraints.
-
-Replace any use of `EXPECT_CALL` for merely setting default behaviors with `ON_CALL` to reduce brittleness and test flakiness.
+4. **Set Up Dependency Updates**
+   - Update GoogleTest and GoogleMock dependencies to the target version using your build system (e.g., CMake or Bazel).
+   - Confirm correct linkage and inclusion as per [Setup and Project Integration](getting-started/configuration-first-run/configuration-setup).
 
 ---
 
-## 3. Sample Migration: Fixing Modifier Order and Deprecated Syntax
+## 2. Adapting Test Code
 
-### Before
+Upgrading to a major version may require changes in your test code to accommodate API modifications or behavioral alterations.
 
-```cpp
-EXPECT_CALL(mockObj, Foo(_))
-    .WillOnce(Return(42))
-    .Times(2)
-    .RetiresOnSaturation();
+### Key Areas to Address:
 
-MOCK_CONST_METHOD1(Bar, void(int));
-```
+- **Refactoring Deprecated Macros and APIs**
+  - Replace deprecated macros with their current alternatives.
+  - Update test fixtures and test suite naming conventions as necessary.
 
-### After
+- **Handling API Breaking Changes**
+  - Modify mock class definitions if mocks rely on altered constructs.
+  - Adjust usage of matchers, actions, and expectations according to new syntax or semantics ([Mocking Macros and Methods](api-reference/matchers-and-mocking/mocking-macros-and-methods), [Actions and Call Behaviors](api-reference/matchers-and-mocking/actions-and-call-behaviors)).
 
-```cpp
-EXPECT_CALL(mockObj, Foo(_))
-    .Times(2)
-    .WillOnce(Return(42))
-    .RetiresOnSaturation();
+- **Address Assertion Behavior Modifications**
+  - Verify that assertions like `EXPECT_*` and `ASSERT_*` behave as expected, especially handling of fatal vs. non-fatal failure modes ([Assertions](api-reference/core-testing-api/assertions)).
 
-MOCK_METHOD(void, Bar, (int), (const));
-```
+- **Update Parameterized and Typed Tests**
+  - Review your value-parameterized and typed test suites for compatibility ([Parameterized and Type-Parameterized Tests](api-reference/core-testing-api/parameterized-and-type-parameterized-tests)).
 
-**Outcome:** Compile-time enforcement avoids unexpected behaviors, and tests become more predictable.
+- **Death Tests Considerations**
+  - If using death tests, review the death test invocation styles and threading considerations ([Death Tests](api-reference/specialized-testing-apis/death-tests), [Death Tests and Failure Handling](guides/advanced-testing-strategies/death-and-failure-tests)).
 
 ---
 
-## 4. Compatibility Strategies
+## 3. Configuration and Build Adjustments
 
-- **Gradual Migration:** Introduce migration changes incrementally in branches or test refactoring cycles.
-- **Automated Checks:** Use compiler warnings and static analysis to detect deprecated usage.
-- **Test Coverage:** Ensure all mock usages are covered by tests that will catch broken behaviors.
-- **Default Actions:** Employ `ON_CALL` for default behaviors to minimize maintenance during refactoring.
+Update your build system configuration to align with changes in GoogleTest’s integration patterns.
 
----
+### Actions:
 
-## 5. References to Edited Behaviors
+- **Update CMake or Bazel Integration**
+  - Refresh your `CMakeLists.txt` or Bazel BUILD files to reflect new source locations, target names, or build flags as detailed in [Build System and Platform Integration](concepts/integration-patterns-advanced/build-system-and-platform-integration).
 
-Stay informed about GoogleMock behavioral changes in:
+- **Enable C++17 and Compiler Flags**
+  - Ensure that the appropriate C++17 standard and compiler options are set to prevent compilation errors.
 
-- [Breaking Changes](https://google.github.io/googletest/changelog/breaking-changes.html)
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- **Adjust Linkage Options for Shared Libraries (if applicable)**
+  - If you link against shared libraries, verify that your runtime flags align with the new library builds.
 
-These provide in-depth migration details and best practices.
-
----
-
-## 6. Best Practices for Large Test Suites
-
-- Avoid tight coupling between mocks and implementation details.
-- Use `StrictMock` selectively to prevent brittle tests.
-- Use sequences and `RetiresOnSaturation()` to control call order and lifecycle.
-- Prefer interfaces and adapters over mocking concrete classes.
-- Regularly update your mocks alongside production code to reduce technical debt.
+- **Validate Integration Entrypoints**
+  - Confirm the use of proper initialization and execution entrypoints ([Integration Entry Points](overview/architecture-features/integration-entrypoints)).
 
 ---
 
-## 7. Troubleshooting Common Migration Issues
+## 4. Testing the Migration
 
-- **Compilation Errors:** Usually due to out-of-order modifiers or old macros. Correct order and migrate macros.
-- **Unexpected Call Failures:** Ensure all expected calls are declared and default actions are in place.
-- **Warnings about Uninteresting Calls:** Consider wrapping the mock in `NiceMock` or declare permissive `EXPECT_CALL`s with `Times(AnyNumber())`.
-- **Overload Ambiguities:** Fully mock all overloaded variants or use `using BaseClass::MethodName;`.
+After modifying your tests and build configuration, thorough validation is critical.
+
+### Recommended Workflow:
+
+1. **Incremental Test Runs**
+   - Run your test suites incrementally to catch failures early.
+
+2. **Debug Failing Tests**
+   - Use `--gmock_verbose=info` and other diagnostic flags to trace mock calls and failures ([Debugging Death Tests and Mocking](faq/advanced-usage-and-performance/debugging-death-tests-and-mocking)).
+
+3. **Update or Create Migration-Specific Tests**
+   - Write additional tests to ensure new behaviors or API changes are exercised.
+
+4. **Use Continuous Integration**
+   - Automate the migration test runs within your CI pipelines to continuously verify.
+
+5. **Evaluate Performance**
+   - Compare test execution times before and after migration; optimize usage of parallelism and parameterized tests ([How to Run Tests Faster](faq/advanced-usage-and-performance/how-to-run-tests-faster)).
 
 ---
 
-## 8. Additional Migration Tips
+## 5. Common Migration Scenarios & Solutions
 
-- Use the verbose flag `--gmock_verbose=info` during migration to trace mock calls.
-- Check your CI pipelines to catch silent failures due to updated mock behaviors.
-- Review the [Legacy gMock FAQ](https://google.github.io/googletest/gmock_faq.html) for known caveats.
+### Scenario: Mock Method Signature Changes
+
+- Update all `MOCK_METHOD` declarations to match new method signatures.
+- Use recommended mocking macros to handle new qualifiers or call types.
+
+### Scenario: Deprecated or Removed Features
+
+- Identify features marked as deprecated in release notes.
+- Refactor tests to replace deprecated features with supported alternatives.
+
+### Scenario: Test Failures Due to Assertion Behavior Changes
+
+- Distinguish between fatal and non-fatal assertion updates.
+- Adjust assertions accordingly, using `ASSERT_*` versus `EXPECT_*` as per best practices.
+
+### Scenario: Build Errors After Updating Dependencies
+
+- Review your build system for changed include paths, link libraries, or compile definitions.
+- Confirm all dependencies are at compatible versions.
 
 ---
 
-## 9. Summary
+## 6. Post-Migration Best Practices
 
-Effective migration is critical for maintaining robust tests and taking full advantage of GoogleMock improvements. This guide delivers actionable steps, concrete examples, and references to ensure your mocking layer evolves safely and efficiently.
+- **Adopt New Features**
+  - Explore new assertion macros, matchers, or test patterns introduced in the latest versions to improve your test quality.
 
+- **Refactor to Increase Maintainability**
+  - Modularize test fixtures, exemplify usage of parameterized tests, and leverage mocks effectively.
+
+- **Document the Migration**
+  - Log key changes, upgrade steps, and lessons learned for your team.
+
+- **Continuously Monitor and Update**
+  - Follow ongoing release notes and prepare early for future migrations.
 
 ---
 
-_This guide is an essential resource for maintainers managing large GoogleTest and GoogleMock codebases or integrating into CI systems._
+## Additional Resources
+
+- [Breaking Changes](breaking-changes) - Detailed description of breaking APIs and behaviors.
+- [GoogleTest Primer](primer.md) - Foundations for writing tests.
+- [GoogleMock Cookbook](gmock_cook_book.md) - Practical mocking recipes.
+- [Running and Configuring Tests](api-reference/core-testing-api/running-and-configuring-tests) - Guidance on test execution.
+- [Mocking with GoogleMock](guides/advanced-testing-strategies/mocking-with-googlemock) - Tutorial on mocking techniques.
+
+---
+
+Migration is a critical step towards leveraging the latest features and improvements in GoogleTest. By following these structured guides, you ensure your tests remain stable, your build processes smooth, and your testing practice robust.
