--- a/overview/architecture-concepts/system-architecture.mdx
+++ b/overview/architecture-concepts/system-architecture.mdx
@@ -1,163 +1,142 @@
 ---
-title: "System Architecture"
-description: "Presents a mermaid diagram and explanation capturing the relationship between test cases, test runners, mocks, assertions, and platform integration. Shows the flow from writing a test to running it, including optional use of GoogleMock for advanced stubbing."
+title: "System Architecture Overview"
+description: "Explore how GoogleTest and GoogleMock work together to support authoring, discovery, execution, and reporting of tests. This section includes mermaid diagrams to map out the major architectural flows, from user test code to framework runtime and result output."
 ---
 
-# System Architecture
+# System Architecture Overview
 
-## Understanding the Core of GoogleTest
-
-GoogleTest is a comprehensive C++ testing framework designed to simplify writing, organizing, and running tests. This page unpacks the internal relationship between the primary components involved in test execution: from writing test cases, to running them, verifying with assertions, optionally mocking behaviors, and integrating with diverse platforms.
-
-Whether you're a developer aiming to optimize your testing workflow or a team integrating GoogleTest into complex environments, this architecture overview will illuminate how GoogleTest orchestrates these elements seamlessly.
+Explore how GoogleTest and GoogleMock collaborate to empower you with a seamless workflow for authoring, discovering, executing, and reporting tests. This page maps out the key components and architectural flows, helping you understand the roles of your test code, the framework runtime, and the output mechanisms involved.
 
 ---
 
-## High-Level Workflow: From Tests to Results
+## Introduction
 
-At its core, GoogleTest follows a clear sequence:
+GoogleTest and GoogleMock together form a powerful C++ testing and mocking framework designed to streamline test automation for your projects. This page focuses on the architectural view of how these tools work together during the entire testing lifecycle.
 
-- **Test Authors** write individual *test cases* using GoogleTest macros.
-- The *test runner* discovers and executes these test cases.
-- Inside each test case, assertions verify behavior correctness.
-- For richer scenarios, *GoogleMock* components simulate dependencies, enabling precise control and verification of interactions.
-- Throughout, platform-specific integration ensures compatibility and efficiency.
+Understanding the architecture is crucial for diagnosing integration issues, extending the framework, or optimizing test performance.
 
-The following section illustrates this process visually.
+---
 
-### Visualizing GoogleTest System Architecture
+## Architecture Overview
+
+At its core, GoogleTest acts as the test authoring and execution engine, while GoogleMock complements it by enabling sophisticated mock object generation and behavior verification. Their runtime systems integrate tightly to support a robust workflow from test discovery to reporting.
+
+
+### Core Components
+
+- **User Test Code:** This is the test code you write using GoogleTest’s APIs, including mock classes defined by GoogleMock.
+- **Test Framework Runtime:** The combined runtime environment of GoogleTest and GoogleMock that discovers tests automatically, executes them, applies assertions, and handles mock verifications.
+- **Test Runner Entry Point:** The entry function (e.g., `main`) often provided by libraries like `gtest_main` or `gmock_main` initiates and controls the test lifecycle.
+- **Test Result Reporter:** Mechanisms that collect the outcomes and generate human- or machine-readable reports.
+
+
+### High-Level Flow
+
+1. **Initialization:** Your test executable calls `testing::InitGoogleMock()`, which initializes GoogleMock as well as GoogleTest.
+2. **Test Discovery:** The framework automatically discovers all test cases and mock expectations defined.
+3. **Execution:** Tests run sequentially or in parallel, invoking test fixtures, assertions, and mock methods.
+4. **Verification:** Post execution, expectations on mocks are automatically verified.
+5. **Reporting:** The results are formatted and outputted to console or other reporters.
+
 
 ```mermaid
 flowchart TD
-  A["Test Case (TEST or TEST_F)"] --> B["Test Runner (RUN_ALL_TESTS)"]
-  B --> C["Assertion Evaluation"]
-  C --> D["Test Result Reporting"]
 
-  subgraph Mocking Support
-    E1["GoogleMock Mocks"] --> C
-    E2["Setting Expectations & Actions"] --> E1
+  USER_CODE["User's Test Code"] -->|Defines Tests & Mocks| TEST_FRAMEWORK["GoogleTest + GoogleMock Runtime"]
+
+  subgraph "Initialization & Startup"
+    ENTRYPOINT["Test Runner Entrypoint\n(main / gmock_main)" ] --> INIT["Call testing::InitGoogleMock()"]
+    INIT --> TEST_DISCOVERY["Automatic Test Discovery"]
   end
 
-  B -->|Dynamic Discovery| A
+  TEST_DISCOVERY --> TEST_EXECUTION["Test Execution"]
 
-  subgraph Platform Integration
-    P1["Compiler & Build System"]
-    P2["Threading & Synchronization"]
-    P3["Platform-Specific Utilities"]
-  end
+  TEST_EXECUTION --> MOCK_VERIFICATION["Mock Expectations Verification"]
+  MOCK_VERIFICATION --> REPORTING["Test Result Reporting"]
+  REPORTING --> USER["User Receives Test Results"]
 
-  A -.-> P1
-  B -.-> P2
-  C -.-> P3
+  TEST_FRAMEWORK --> TEST_EXECUTION
 
-  style A fill:#e0f7fa,stroke:#00796b,stroke-width:2px
-  style B fill:#fff9c4,stroke:#fbc02d,stroke-width:2px
-  style C fill:#ffe0b2,stroke:#f57c00,stroke-width:2px
-  style D fill:#c8e6c9,stroke:#388e3c,stroke-width:2px
-  style E1 fill:#d1c4e9,stroke:#512da8,stroke-width:2px
-  style E2 fill:#b39ddb,stroke:#311b92,stroke-width:2px
-  style P1 fill:#ffccbc,stroke:#bf360c,stroke-width:1px,stroke-dasharray: 5 5
-  style P2 fill:#b2dfdb,stroke:#004d40,stroke-width:1px,stroke-dasharray: 5 5
-  style P3 fill:#f8bbd0,stroke:#880e4f,stroke-width:1px,stroke-dasharray: 5 5
+  classDef process fill:#0ca,stroke:#034,stroke-width:2px;
+  class ENTRYPOINT,INIT,TEST_DISCOVERY,TEST_EXECUTION,MOCK_VERIFICATION,REPORTING process;
 ```
 
+---
 
-## Components Explained
+## Key Architectural Aspects
 
-### 1. Test Cases
+### 1. Test Entrypoint
 
-Users write tests using macros such as `TEST()` or `TEST_F()`, defining individual test functions within test suites or fixture classes. These leverage assertion macros to validate expected behaviors.
+The main function typically provided by GoogleMock’s `gmock_main` defines the program’s entry. It performs test initialization by calling `testing::InitGoogleMock(...)`, which prepares both GoogleMock and GoogleTest. You do not need to define this yourself unless custom behavior is needed.
 
-**Why it matters:** Tests isolate code paths and verify correctness, forming the foundation of reliable software.
+### 2. Automatic Test Discovery
 
-### 2. Test Runner
+GoogleTest automatically finds all your tests and mock expectations registered by the macros (`TEST()`, `TEST_F()`, `EXPECT_CALL()` etc.) at static initialization phase. This obviates the need to manually list or register tests.
 
-GoogleTest's internal test runner automatically discovers all registered tests and invokes them one by one via `RUN_ALL_TESTS()`. It handles setup, teardown, and result aggregation.
+### 3. Test Execution Lifecycle
 
-**Why it matters:** Automates test execution and ensures consistent environment control.
+Tests are run one by one, creating fresh test fixture instances for isolated state. GoogleMock tracks mock calls, enforcing expectations during each test.
 
-### 3. Assertions
+### 4. Mock Integration
 
-Assertions like `EXPECT_EQ`, `ASSERT_TRUE`, and many others evaluate if conditions hold. GoogleTest distinguishes between **fatal** (aborts current test on failure) and **non-fatal** (reports failure but continues).
+Since GoogleMock depends on GoogleTest, mock expectations participate fully in the testing lifecycle. Mock method calls are monitored, and failures or unexpected calls trigger test failures immediately.
 
-**Why it matters:** Provides detailed failure diagnostics and supports flexible failure handling strategies.
+### 5. Test Reporting
 
-### 4. GoogleMock Integration (Optional)
-
-For tests that interact with external components or complex dependencies, GoogleMock offers:
-
-- **Mocks:** Objects that simulate real interfaces.
-- **Expectations:** Control what calls are expected and when.
-- **Actions:** Define behavior responses or side effects.
-
-These integrate seamlessly, allowing GoogleMock mocks to be used inside test cases.
-
-**Why it matters:** Enables precise behavioral verification and unit testing of components in isolation.
-
-### 5. Platform Integration
-
-GoogleTest integrates tightly with platform-specific aspects such as compiler/linker configurations, threading primitives, and file I/O mechanisms to provide:
-
-- Thread safety when possible
-- Cross-platform portability
-- Optimized build configurations
-
-**Why it matters:** Ensures reliable operation across multiple operating systems and toolchains.
+Results aggregate successes, failures, and warnings. Output is highly detailed, including failure messages and stack traces, making it easy to identify problems.
 
 ---
 
-## Real-World Usage Scenario
+## Practical User Flow
 
-Imagine you are developing a C++ library that processes user input. You want to:
+Imagine you are developing a module that relies on external dependencies. You write tests for your module using GoogleTest and GoogleMock:
 
-- Write **test cases** that check input validation.
-- Use **assertions** to verify expected outputs.
-- For the component that interacts with a database, use **GoogleMock** to simulate database calls.
-- Run your tests via the **test runner** and get concise reports to guide debugging.
+1. Define test cases with `TEST()` or `TEST_F()`.
+2. Create mock classes using `MOCK_METHOD` macros.
+3. Use `EXPECT_CALL` to specify required mock behavior and validate interactions.
+4. Run tests. The test binary, powered by `gmock_main`, initializes everything and automatically discovers your tests.
+5. Tests execute. Your test code interacts with mocks, which verify calls in real-time.
+6. Upon test completion (or failure), all mock expectations are verified, and a detailed test report is generated.
 
-This system architecture ensures each step is modular, well-coordinated, and extensible to manage complexity.
-
----
-
-## Tips for Success With GoogleTest System Architecture
-
-- **Structure your tests logically**: Group related tests into suites to improve clarity.
-- **Leverage test fixtures** (`TEST_F`) to share setup and teardown:
-  Clear separation keeps tests independent and maintainable.
-- **Use GoogleMock for isolated behavior verification**: This allows your tests to focus on code under test without side effects.
-- **Understand assertion types and proper use cases**: Use fatal assertions to stop on critical failures, and non-fatal ones to gather multiple failure reports.
-- **Be aware of platform settings**: Make sure the build system compiles GoogleTest to match your project's runtime environment (especially on Windows regarding runtime libraries).
+This architecture hides complex runtime mechanics, so you focus on writing meaningful tests without boilerplate or manual registration.
 
 ---
 
-## Troubleshooting Common Issues
+## Troubleshooting & Tips
 
-<AccordionGroup title="System Architecture Troubleshooting">
-<Accordion title="Why aren't my tests discovered by the test runner?">
-Ensure your source files containing tests are compiled and linked correctly. Verify that macros like TEST() are used and that `RUN_ALL_TESTS()` is called.
-</Accordion>
-<Accordion title="How to debug assertion failures?">
-When an assertion fails, GoogleTest prints the exact file and line number, along with details of the failed condition. Use non-fatal assertions to get multiple failure points in one run.
-</Accordion>
-<Accordion title="Can I use GoogleMock features without including the full GoogleMock framework?">
-GoogleMock is designed to integrate with GoogleTest seamlessly, but if you only need GoogleTest’s assertions and test execution, you can omit GoogleMock. However, the power of mocking requires linking with GoogleMock libraries.
-</Accordion>
-<Accordion title="How to ensure my custom mocks interact properly with platform threading?">
-GoogleTest automatically manages threading primitives when pthread is available, ensuring thread-safe mocks. On unsupported platforms, use synchronization carefully or disable multi-threading.
-</Accordion>
-<Accordion title="How to configure GoogleTest for different platforms?">
-Refer to platform-specific configuration macros and compiler flags defined in CMake or your build system to ensure compatibility and optimal behavior for your target environment.
-</Accordion>
-</AccordionGroup>
+<Tip>
+If tests do not run, verify that your executable links against `gmock_main` or calls `testing::InitGoogleMock()` explicitly. Without initialization, tests won’t be discovered or executed.
+</Tip>
+
+<Tip>
+Linking GoogleMock with the proper compiler and linker flags, as guided by the CMake build instructions, is essential for correct test runtime behavior.
+</Tip>
+
+<Tip>
+Use GoogleMock’s strict or nice mock wrappers (`StrictMock`, `NiceMock`) to control warning and error reporting of unexpected calls, aiding clear failure diagnosis.
+</Tip>
+
+<Tip>
+For parallel or advanced test runners, knowing the architecture helps you ensure your tests remain isolated and mock verifications do not interfere.
+</Tip>
 
 ---
 
-## Next Steps
+## Summary
 
-- Dive into **[Core Concepts and Terminology](/overview/architecture-concepts/core-concepts-terminology)** to understand foundational terms.
-- Explore **[Integration with Tools & Extensions](/overview/integration-and-ecosystem/ecosystem-integrations)** to connect GoogleTest with CI/CD and build environments.
-- Start writing your first tests with **[Writing Your First Test](/getting-started/first-run-validation/writing-first-test)**.
+This architecture overview gives you the foundational understanding of how GoogleTest and GoogleMock interoperate to provide an efficient, robust testing environment. By recognizing the test lifecycle stages, your interaction with user code, and how the framework manages mocks and test reporting, you can use, debug, or extend the framework confidently.
 
 ---
 
-*This page provides the architecture context to empower you to master GoogleTest’s workflow from test creation to execution, bolstered by powerful mocking and platform support.*
+## Additional Resources
+
+- [What is GoogleTest?](./overview/intro-value-prop/what-is-googletest) — Start here for a gentle product introduction.
+- [Core Value and Key Features](./overview/intro-value-prop/core-value-features) — Dive into capabilities that shape the architecture.
+- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly guide to mocks.
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Covers advanced mocking strategies.
+- [Test Structure & Lifecycle](./api-reference/core-testing-api/test-structure) — API reference on test lifecycles.
+- [Integration with Build Systems & Other Tools](./overview/integration-feature-overview/integration-build-systems) — Ensure you build and integrate properly.
+
+---
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/src/gmock_main.cc", "range": "1-59"}]} />
